--- a/blog/Dockerfile
+++ b/blog/Dockerfile
@@ -10,3 +10,4 @@ ADD . /app
 # Запускает команду pip install для всех библиотек, перечисленных в requirements.txt
 RUN apk add build-base jpeg-dev zlib-dev
 RUN pip install -r requirements.txt
+RUN python manage.py migrate
